# LiteLLM-key-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  litellm.config.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_lead_api_keys.py
app/: __init__.py  cli.py  config.py  main.py  models.py
app/core/: security.py
app/db/: session.py
app/services/: audit.py  bootstrap.py  identity.py  litellm.py
app/web/: deps.py  routes.py
static/css/: app.css
templates/: base.html
templates/admin/: dashboard.html  invite_created.html  lead_key_created.html
templates/auth/: accept_invite.html  admin_login.html  invite_invalid.html  lead_login.html  login.html
templates/team/: dashboard.html  lead_dashboard.html  list.html
tests/: conftest.py  test_litellm_client.py  test_security.py  test_ui_flow.py
