[project]
name = "litellm-team-keys"
version = "0.1.0"
description = "Team-lead delegated LiteLLM virtual key management service"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "bcrypt>=4.1.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "starlette>=0.46.2,<1.0.0",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
